# zrive-ds

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
mlruns/0/: meta.yaml
mlruns/0/7ace00ac160b4de8b56801030778ba70/: meta.yaml
mlruns/0/e1a5a07a81fd428c871e73e1ab486ec5/: meta.yaml
mlruns/0/e1a5a07a81fd428c871e73e1ab486ec5/tags/: mlflow.source.git.commit
mlruns/0/fdc699c3c1f74a7fa92fbb18e28037b4/: meta.yaml
mlruns/0/fdc699c3c1f74a7fa92fbb18e28037b4/metrics/: mean_squared_error
mlruns/0/ffc3b71bf08b4926b4554ffa2a2ed3fc/: meta.yaml
mlruns/0/ffc3b71bf08b4926b4554ffa2a2ed3fc/tags/: mlflow.source.name
models/: scaler.pkl
src/module_1/: __init__.py  module_1_meteo_api.py  references.py  test.py
src/module_2/: download.py  eda.ipynb  problem.ipynb  utils.py
src/module_3/: config.py  dataloader.py  explore.ipynb  logger.py  main.py  model.py  prepare.py  preprocessor.py  train.py  utils.py
src/module_3/models/: dataloader.py  main.py  scaler.pkl
src/module_5/: config.py  main.py  module5.ipynb  module5_work.ipynb  utils.py
tests/module_1/: test_meteo_api.py
