[project]
name = "zrive-ds"
version = "0.1.0"
description = "Project for the program Zrive Applied Data Science"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.7.2",
    "numpy>=1.25.2",
    "openmeteo-requests>=1.3.0",
    "requests-cache>=1.2.1",
    "requests>=2.31.0",
    "scikit-learn>=1.4.1post1",
    "retry-requests>=2.0.0",
    "pandas>=2.0.3",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"
include = ["*.py"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true
