[project]
name = "zrive-ds"
version = "0.1.0"
description = "Project for the program Zrive Applied Data Science"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.7.2",
    "numpy>=1.25.2",
    "openmeteo-requests>=1.3.0",
    "requests-cache>=1.2.1",
    "requests>=2.31.0",
    "scikit-learn>=1.4.1post1",
    "retry-requests>=2.0.0",
    "pandas>=2.0.3",
    "python-dotenv>=1.0.1",
    "boto3>=1.36.4",
    "awscli>=1.37.5",
    "pyarrow>=19.0.0",
    "seaborn>=0.13.2",
    "zenml>=0.74.0",
    "mlflow>=1.27.0",
    "xgboost>=2.1.4",
    "lightgbm>=4.6.0",
    "plotnine>=0.14.5",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "isort>=5.13.2",
    "mypy>=1.14.1",
    "pytest>=7.4.0",
    "ruff>=0.9.2",
]

[tool.ruff]
line-length = 88
target-version = "py311"
include = ["*.py"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true
